--- a/src/QuestionnaireSystem.API.Tests/QuestionnaireSystem.API.Tests.csproj
+++ b/src/QuestionnaireSystem.API.Tests/QuestionnaireSystem.API.Tests.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
